add image uploads and profile page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   </head>
   <header>
     <% if current_user %>
+      <h1 class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></h1>
     <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
     <% else %>
     <h5>Please Login or Register <%= link_to('Login', new_user_session_path)  %> <%= link_to('Register', new_user_registration_path)  %></h5>
