--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,32 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <header>
-    <% if current_user %>
-      <h1 class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></h1>
-    <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
-    <% else %>
-    <h5>Please Login or Register <%= link_to('Login', new_user_session_path)  %> <%= link_to('Register', new_user_registration_path)  %></h5>
-    <% end %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+      <a class="navbar-brand" href="/">Imagr</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+
+          </li>
+        </ul>
+
+        <% if current_user %>
+          <h1 class="round-image-50"><%= image_tag(current_user.avatar.url(:thumb)) %></h1>
+        <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+        <% else %>
+        <h5>Please Login or Register <%= link_to('Login', new_user_session_path)  %> <%= link_to('Register', new_user_registration_path)  %></h5>
+        <% end %>
+      </div>
+    </nav>
+
+
+
+
+
+
   </header>
   <body>
     <div class='container'>
