--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,7 +1,11 @@
-<h1>TESTING!!!!!!</h1>
+<% if current_user %>
+  <h1>Welcome: <%= @user.username  %></h1>
+  <h2>Your Images</h2>
+  <%= link_to('Add Image', new_image_path)  %>
+<% elsif %>
+<h1><%= @user.username  %> Images</h1>
+<% end %>
 
-<h1>Welcome</h1>
-<h3>Newest images</h3>
 <% @images.each do |image| %>
   <div class="row">
     <div class="col sm-4">
@@ -10,6 +14,14 @@
         <%= image_tag(image.photo) %>
         <h3>Title: <%= image.title %></h3>
         <h5>Description: <%= image.description %></h5>
+        <h5>Posted: <%= image.created_at.to_formatted_s(:long_ordinal) %></h5>
+        <% if current_user && current_user.id === @user.id %>
+          <p><%= link_to('Edit', edit_image_path(image))  %> |
+          <%= link_to "Delete", image_path(image),
+           :data => {:confirm => "You sure?",
+           :method => "delete"} %>
+         </p>
+        <% end %>
         </div>
       </div>
     </div>
