--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-      <a class="navbar-brand" href="/">Imagr</a>
+      <ul><%= link_to('Imagr', root_path) %></ul>
+      <% if current_user %>
+        <ul><%= link_to('Profile', profile_path(current_user.id)) %></ul>
+      <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
