--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -6,7 +6,7 @@
       <div class="card">
         <div class="card-block">
         <%= image_tag(image.photo) %>
-        <h1>test</h1>
+        <h3>Title: <%= link_to image.title, image_path(image) %></h3>
         </div>
       </div>
     </div>
