--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -4,4 +4,20 @@
 <h5>Description: <%= @image.description %></h5>
 <h5>Posted: <%= @image.created_at.to_formatted_s(:long_ordinal) %></h5>
 
-<%= link_to('New Image', new_image_comment_path(@image)) %>
+
+<% @comments.each do |comment| %>
+  <div class="row">
+    <div class="col sm-4">
+      <div class="card">
+        <div class="card-block">
+          <h4>Author: <%= comment.user.username %></h4>
+          <h5>Posted: <%= comment.created_at.to_formatted_s(:long_ordinal) %></h5>
+          <h3><%= comment.body %></h3>
+        </div>
+      </div>
+    </div>
+  </div><br>
+<% end %>
+
+
+<%= link_to('New Comment', new_image_comment_path(@image)) %>
