add tags controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
       <ul><%= link_to('Imagr', root_path) %></ul>
       <% if current_user %>
         <ul><%= link_to('Profile', profile_path(current_user.id)) %></ul>
+        <ul><%= link_to('Edit User', edit_user_registration_path) %></ul>
       <% end %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
